triton_backend_sys/src/bindings.rs

pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_INVALID: TRITONSERVER_datatype_enum = 0;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_BOOL: TRITONSERVER_datatype_enum = 1;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_UINT8: TRITONSERVER_datatype_enum = 2;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_UINT16: TRITONSERVER_datatype_enum = 3;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_UINT32: TRITONSERVER_datatype_enum = 4;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_UINT64: TRITONSERVER_datatype_enum = 5;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_INT8: TRITONSERVER_datatype_enum = 6;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_INT16: TRITONSERVER_datatype_enum = 7;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_INT32: TRITONSERVER_datatype_enum = 8;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_INT64: TRITONSERVER_datatype_enum = 9;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_FP16: TRITONSERVER_datatype_enum = 10;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_FP32: TRITONSERVER_datatype_enum = 11;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_FP64: TRITONSERVER_datatype_enum = 12;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_BYTES: TRITONSERVER_datatype_enum = 13;
pub const TRITONSERVER_datatype_enum_TRITONSERVER_TYPE_BF16: TRITONSERVER_datatype_enum = 14;
#[doc = " TRITONSERVER_DataType\n\n Tensor data types recognized by TRITONSERVER.\n"]
pub type TRITONSERVER_datatype_enum = ::std::os::raw::c_uint;
#[doc = " TRITONSERVER_DataType\n\n Tensor data types recognized by TRITONSERVER.\n"]
pub use self::TRITONSERVER_datatype_enum as TRITONSERVER_DataType;
extern "C" {
    #[doc = " Get the string representation of a data type. The returned string\n is not owned by the caller and so should not be modified or freed.\n\n \\param datatype The data type.\n \\return The string representation of the data type."]
    pub fn TRITONSERVER_DataTypeString(
        datatype: TRITONSERVER_DataType,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Get the Triton datatype corresponding to a string representation\n of a datatype.\n\n \\param dtype The datatype string representation.\n \\return The Triton data type or TRITONSERVER_TYPE_INVALID if the\n string does not represent a data type."]
    pub fn TRITONSERVER_StringToDataType(
        dtype: *const ::std::os::raw::c_char,
    ) -> TRITONSERVER_DataType;
}
extern "C" {
    #[doc = " Get the size of a Triton datatype in bytes. Zero is returned for\n TRITONSERVER_TYPE_BYTES because it have variable size. Zero is\n returned for TRITONSERVER_TYPE_INVALID.\n\n \\param dtype The datatype.\n \\return The size of the datatype."]
    pub fn TRITONSERVER_DataTypeByteSize(datatype: TRITONSERVER_DataType) -> u32;
}
pub const TRITONSERVER_memorytype_enum_TRITONSERVER_MEMORY_CPU: TRITONSERVER_memorytype_enum = 0;
pub const TRITONSERVER_memorytype_enum_TRITONSERVER_MEMORY_CPU_PINNED:
    TRITONSERVER_memorytype_enum = 1;
pub const TRITONSERVER_memorytype_enum_TRITONSERVER_MEMORY_GPU: TRITONSERVER_memorytype_enum = 2;
#[doc = " TRITONSERVER_MemoryType\n\n Types of memory recognized by TRITONSERVER.\n"]
pub type TRITONSERVER_memorytype_enum = ::std::os::raw::c_uint;
#[doc = " TRITONSERVER_MemoryType\n\n Types of memory recognized by TRITONSERVER.\n"]
pub use self::TRITONSERVER_memorytype_enum as TRITONSERVER_MemoryType;
extern "C" {
    #[doc = " Get the string representation of a memory type. The returned\n string is not owned by the caller and so should not be modified or\n freed.\n\n \\param memtype The memory type.\n \\return The string representation of the memory type."]
    pub fn TRITONSERVER_MemoryTypeString(
        memtype: TRITONSERVER_MemoryType,
    ) -> *const ::std::os::raw::c_char;
}
pub const TRITONSERVER_parametertype_enum_TRITONSERVER_PARAMETER_STRING:
    TRITONSERVER_parametertype_enum = 0;
pub const TRITONSERVER_parametertype_enum_TRITONSERVER_PARAMETER_INT:
    TRITONSERVER_parametertype_enum = 1;
pub const TRITONSERVER_parametertype_enum_TRITONSERVER_PARAMETER_BOOL:
    TRITONSERVER_parametertype_enum = 2;
pub const TRITONSERVER_parametertype_enum_TRITONSERVER_PARAMETER_BYTES:
    TRITONSERVER_parametertype_enum = 3;
#[doc = " TRITONSERVER_ParameterType\n\n Types of parameters recognized by TRITONSERVER.\n"]
pub type TRITONSERVER_parametertype_enum = ::std::os::raw::c_uint;
#[doc = " TRITONSERVER_ParameterType\n\n Types of parameters recognized by TRITONSERVER.\n"]
pub use self::TRITONSERVER_parametertype_enum as TRITONSERVER_ParameterType;
extern "C" {
    #[doc = " Get the string representation of a parameter type. The returned\n string is not owned by the caller and so should not be modified or\n freed.\n\n \\param paramtype The parameter type.\n \\return The string representation of the parameter type."]
    pub fn TRITONSERVER_ParameterTypeString(
        paramtype: TRITONSERVER_ParameterType,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Create a new parameter object. The caller takes ownership of the\n TRITONSERVER_Parameter object and must call TRITONSERVER_ParameterDelete to\n release the object. The object will maintain its own copy of the 'value'\n\n \\param name The parameter name.\n \\param type The parameter type.\n \\param value The pointer to the value.\n \\return A new TRITONSERVER_Parameter object. 'nullptr' will be returned if\n 'type' is 'TRITONSERVER_PARAMETER_BYTES'. The caller should use\n TRITONSERVER_ParameterBytesNew to create parameter with bytes type."]
    pub fn TRITONSERVER_ParameterNew(
        name: *const ::std::os::raw::c_char,
        type_: TRITONSERVER_ParameterType,
        value: *const ::std::os::raw::c_void,
    ) -> *mut TRITONSERVER_Parameter;
}
extern "C" {
    #[doc = " Create a new parameter object with type TRITONSERVER_PARAMETER_BYTES.\n The caller takes ownership of the TRITONSERVER_Parameter object and must\n call TRITONSERVER_ParameterDelete to release the object. The object only\n maintains a shallow copy of the 'byte_ptr' so the data content must be\n valid until the parameter object is deleted.\n\n \\param name The parameter name.\n \\param byte_ptr The pointer to the data content.\n \\param size The size of the data content.\n \\return A new TRITONSERVER_Error object."]
    pub fn TRITONSERVER_ParameterBytesNew(
        name: *const ::std::os::raw::c_char,
        byte_ptr: *const ::std::os::raw::c_void,
        size: u64,
    ) -> *mut TRITONSERVER_Parameter;
}
extern "C" {
    #[doc = " Delete an parameter object.\n\n \\param parameter The parameter object."]
    pub fn TRITONSERVER_ParameterDelete(parameter: *mut TRITONSERVER_Parameter);
}
pub const TRITONSERVER_instancegroupkind_enum_TRITONSERVER_INSTANCEGROUPKIND_AUTO:
    TRITONSERVER_instancegroupkind_enum = 0;
pub const TRITONSERVER_instancegroupkind_enum_TRITONSERVER_INSTANCEGROUPKIND_CPU:
    TRITONSERVER_instancegroupkind_enum = 1;
pub const TRITONSERVER_instancegroupkind_enum_TRITONSERVER_INSTANCEGROUPKIND_GPU:
    TRITONSERVER_instancegroupkind_enum = 2;
pub const TRITONSERVER_instancegroupkind_enum_TRITONSERVER_INSTANCEGROUPKIND_MODEL:
    TRITONSERVER_instancegroupkind_enum = 3;
#[doc = " TRITONSERVER_InstanceGroupKind\n\n Kinds of instance groups recognized by TRITONSERVER.\n"]
pub type TRITONSERVER_instancegroupkind_enum = ::std::os::raw::c_uint;
#[doc = " TRITONSERVER_InstanceGroupKind\n\n Kinds of instance groups recognized by TRITONSERVER.\n"]
pub use self::TRITONSERVER_instancegroupkind_enum as TRITONSERVER_InstanceGroupKind;
extern "C" {
    #[doc = " Get the string representation of an instance-group kind. The\n returned string is not owned by the caller and so should not be\n modified or freed.\n\n \\param kind The instance-group kind.\n \\return The string representation of the kind."]
    pub fn TRITONSERVER_InstanceGroupKindString(
        kind: TRITONSERVER_InstanceGroupKind,
    ) -> *const ::std::os::raw::c_char;
}
pub const TRITONSERVER_loglevel_enum_TRITONSERVER_LOG_INFO: TRITONSERVER_loglevel_enum = 0;
pub const TRITONSERVER_loglevel_enum_TRITONSERVER_LOG_WARN: TRITONSERVER_loglevel_enum = 1;
pub const TRITONSERVER_loglevel_enum_TRITONSERVER_LOG_ERROR: TRITONSERVER_loglevel_enum = 2;
pub const TRITONSERVER_loglevel_enum_TRITONSERVER_LOG_VERBOSE: TRITONSERVER_loglevel_enum = 3;
#[doc = " TRITONSERVER_Logging\n\n Types/levels of logging.\n"]
pub type TRITONSERVER_loglevel_enum = ::std::os::raw::c_uint;
#[doc = " TRITONSERVER_Logging\n\n Types/levels of logging.\n"]
pub use self::TRITONSERVER_loglevel_enum as TRITONSERVER_LogLevel;
pub const TRITONSERVER_logformat_enum_TRITONSERVER_LOG_DEFAULT: TRITONSERVER_logformat_enum = 0;
pub const TRITONSERVER_logformat_enum_TRITONSERVER_LOG_ISO8601: TRITONSERVER_logformat_enum = 1;
#[doc = "\n Format of logging.\n\n TRITONSERVER_LOG_DEFAULT: the log severity (L) and timestamp will be\n logged as \"LMMDD hh:mm:ss.ssssss\".\n\n TRITONSERVER_LOG_ISO8601: the log format will be \"YYYY-MM-DDThh:mm:ssZ L\".\n"]
pub type TRITONSERVER_logformat_enum = ::std::os::raw::c_uint;
#[doc = "\n Format of logging.\n\n TRITONSERVER_LOG_DEFAULT: the log severity (L) and timestamp will be\n logged as \"LMMDD hh:mm:ss.ssssss\".\n\n TRITONSERVER_LOG_ISO8601: the log format will be \"YYYY-MM-DDThh:mm:ssZ L\".\n"]
pub use self::TRITONSERVER_logformat_enum as TRITONSERVER_LogFormat;
extern "C" {
    #[doc = " Is a log level enabled?\n\n \\param level The log level.\n \\return True if the log level is enabled, false if not enabled."]
    pub fn TRITONSERVER_LogIsEnabled(level: TRITONSERVER_LogLevel) -> bool;
}
extern "C" {
    #[doc = " Log a message at a given log level if that level is enabled.\n\n \\param level The log level.\n \\param filename The file name of the location of the log message.\n \\param line The line number of the log message.\n \\param msg The log message.\n \\return a TRITONSERVER_Error indicating success or failure."]
    pub fn TRITONSERVER_LogMessage(
        level: TRITONSERVER_LogLevel,
        filename: *const ::std::os::raw::c_char,
        line: ::std::os::raw::c_int,
        msg: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
pub const TRITONSERVER_errorcode_enum_TRITONSERVER_ERROR_UNKNOWN: TRITONSERVER_errorcode_enum = 0;
pub const TRITONSERVER_errorcode_enum_TRITONSERVER_ERROR_INTERNAL: TRITONSERVER_errorcode_enum = 1;
pub const TRITONSERVER_errorcode_enum_TRITONSERVER_ERROR_NOT_FOUND: TRITONSERVER_errorcode_enum = 2;
pub const TRITONSERVER_errorcode_enum_TRITONSERVER_ERROR_INVALID_ARG: TRITONSERVER_errorcode_enum =
    3;
pub const TRITONSERVER_errorcode_enum_TRITONSERVER_ERROR_UNAVAILABLE: TRITONSERVER_errorcode_enum =
    4;
pub const TRITONSERVER_errorcode_enum_TRITONSERVER_ERROR_UNSUPPORTED: TRITONSERVER_errorcode_enum =
    5;
pub const TRITONSERVER_errorcode_enum_TRITONSERVER_ERROR_ALREADY_EXISTS:
    TRITONSERVER_errorcode_enum = 6;
#[doc = " The TRITONSERVER_Error error codes"]
pub type TRITONSERVER_errorcode_enum = ::std::os::raw::c_uint;
#[doc = " The TRITONSERVER_Error error codes"]
pub use self::TRITONSERVER_errorcode_enum as TRITONSERVER_Error_Code;
extern "C" {
    #[doc = " Create a new error object. The caller takes ownership of the\n TRITONSERVER_Error object and must call TRITONSERVER_ErrorDelete to\n release the object.\n\n \\param code The error code.\n \\param msg The error message.\n \\return A new TRITONSERVER_Error object."]
    pub fn TRITONSERVER_ErrorNew(
        code: TRITONSERVER_Error_Code,
        msg: *const ::std::os::raw::c_char,
    ) -> *mut TRITONSERVER_Error;
}
extern "C" {
    #[doc = " Delete an error object.\n\n \\param error The error object."]
    pub fn TRITONSERVER_ErrorDelete(error: *mut TRITONSERVER_Error);
}
